Remove caret from catalog dropdown menu

--- a/index.html
+++ b/index.html
@@ -89,23 +89,28 @@
                     <li class="nav-item">
                         <a href="#main_description"
                             class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Описание
-                            бренда<i class="fas fa-angle-double-right px-2 oranged_color"></i></a>
+                            бренда
+                            <i class="fas fa-angle-double-right px-2 oranged_color"></i>
+                        </a>
                     </li>
                     <li class="nav-item dropdown">
                         <!--<a href="catalog/index.html" class="nav-link pr-0 oranged_color font-weight-bold bg-dark"
                             target="_blank">Каталог<i class="fas fa-angle-double-right px-2 oranged_color"></i></a> -->
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle pr-0 oranged_color font-weight-bold bg-dark" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Каталог
+                            <i class="fas fa-angle-double-right px-2 oranged_color"></i>
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="catalog/index.html" target="_blank">Переглянути</a>
-                            <a class="dropdown-item" href="pdf/Katalog King_Roy.pdf" download="Katalog King_Roy.pdf">Завантижити</a>
+                        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="catalog/index.html" target="_blank">Переглянути</a>
+                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="pdf/Katalog King_Roy.pdf" download="Katalog King_Roy.pdf">Завантижити</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a href="#footer" class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Контакты<i
-                                class="fas fa-angle-double-right px-2 oranged_color"></i></a>
+                        <a href="#footer" class="nav-link pr-0 oranged_color font-weight-bold bg-dark">
+                            Контакты
+                            <i class="fas fa-angle-double-right px-2 oranged_color"></i>
+                        </a>
                     </li>
                 </ul>
             </div>
