Update catalog dropdown menu items text

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                             <i class="fas fa-angle-double-right px-2 oranged_color"></i>
                         </a>
                         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="catalog/index.html" target="_blank">Переглянути</a>
-                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="pdf/Katalog King_Roy.pdf" download="Katalog King_Roy.pdf">Завантижити</a>
+                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="catalog/index.html" target="_blank">Посмотреть</a>
+                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="pdf/Katalog King_Roy.pdf" download="Katalog King_Roy.pdf">Скачать</a>
                         </div>
                     </li>
                     <li class="nav-item">
