Update navbar and dropdown collapse

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#main_description"
+                        <a href="#main_description" id="main_description_nav_item"
                             class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Описание
                             бренда
                             <i class="fas fa-angle-double-right px-2 oranged_color"></i>
@@ -96,18 +96,22 @@
                     <li class="nav-item dropdown">
                         <!--<a href="catalog/index.html" class="nav-link pr-0 oranged_color font-weight-bold bg-dark"
                             target="_blank">Каталог<i class="fas fa-angle-double-right px-2 oranged_color"></i></a> -->
-                        <a class="nav-link dropdown-toggle pr-0 oranged_color font-weight-bold bg-dark" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle pr-0 oranged_color font-weight-bold bg-dark" href="#"
+                            id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
                             Каталог
                             <i class="fas fa-angle-double-right px-2 oranged_color"></i>
                         </a>
                         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="catalog/index.html" target="_blank">Посмотреть</a>
-                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="pdf/Katalog King_Roy.pdf" download="Katalog King_Roy.pdf">Скачать</a>
+                            <a class="dropdown-item oranged_color font-weight-bold bg-dark" href="catalog/index.html"
+                                target="_blank">Посмотреть</a>
+                            <a class="dropdown-item oranged_color font-weight-bold bg-dark"
+                                href="pdf/Katalog King_Roy.pdf" download="Katalog King_Roy.pdf">Скачать</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a href="#footer" class="nav-link pr-0 oranged_color font-weight-bold bg-dark">
+                        <a href="#footer" id="contacts_nav_item"
+                            class="nav-link pr-0 oranged_color font-weight-bold bg-dark">
                             Контакты
                             <i class="fas fa-angle-double-right px-2 oranged_color"></i>
                         </a>
